# cad-profiler

./: .gitignore  DEV_SYNC_SUMMARY.md  DEV_WORKFLOW.md  app.py  main.py  pyproject.toml
test_files/mesh/stl/: Cabinet_METRIC.stl
test_files/neutral/step/145-203-8mm-bearing-1/: Table Bearing.step
test_files/parametric/catia/: BACN10HR4CS                             ,---,3DMS,---,1,.CATPart
