[project]
name = "cad-profiler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.54.0",
    "trimesh>=4.6.0",
    "networkx>=3.4",
    "ezdxf>=1.4.0",
    "numpy>=2.2.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.15.1",
]
